Add Vehicle Document Add api
